2003-01-24  Trey Matteson  <trey@apple.com>

	Chris pointed out a FIXME that led to a more contained way to make sure the cursor
	is correct during and after image/text/URL dragging.

        Reviewed by Chris.

        * WebView.subproj/WebHTMLView.m:
        (-[WebHTMLView draggedImage:endedAt:operation:]):  No need to reset the cursor at
	the end of dragging.  WC deals with it.
        * WebView.subproj/WebHTMLViewPrivate.m:
        (-[WebHTMLView _handleMouseDragged:]):  No need to set the cursor to arrow, WC
	deals with it.

2003-01-24  Darin Adler  <darin@apple.com>

        Reviewed by Dave.

	- fixed 3142852 -- frame content repeatedly requested

        * WebCoreSupport.subproj/WebBridge.m: (-[WebBridge incomingReferrer]):
	Added a way to get the referrer across the bridge, needed for bug fix.

2003-01-24  Ed Voas  <voas@apple.com>

        Reviewed by Darin.

        Netscape plugins were being improperly positioned. I noticed this when I
        put the web view into a window with borders around it (Carbon metal window,
        but I would imagine Cocoa metal would do it too).

        * Plugins.subproj/WebBaseNetscapePluginView.m:
        (-[WebBaseNetscapePluginView saveAndSetPortStateForUpdate:]):

2003-01-23  Trey Matteson  <trey@apple.com>

	3155162 - cursor changes to I-beam after dragging image	
	3154468 - no mouseup event comes through after text snippet drag

	During AK dragging the system takes over the event stream and we never get any mouse
	move or up events.  It also changes the cursor behind out back.  When done
	cached state that thinks it knows the current cursor is wrong.

	The fix is that after the drag we reset the cursor and synthesize a mouseup event,
	which then sets the cursor based on what we're really over.

        Reviewed by Darin.

        * WebView.subproj/WebHTMLView.m:
        (-[WebHTMLView draggedImage:endedAt:operation:]):  After the drag,
	reset the cursor, fake up a mouseup event.
